--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,7 +4,11 @@ layout: single
 excerpt: "Page not found. Your pixels are in another canvas."
 sitemap: false
 permalink: /404.html
+header:
+  image:
+  caption:
 ---
+![Alt Text](/images/giftest2.gif)
 
 Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
 
